test/tests/compiler/18_structures/invalid_parse/extra_credit/struct_union.plx
# Can't use struct and union keywords in same declaration
type union struc s (a: i32)

pub fn main(none) i32 {
    return 0
}
